--- a/main.css
+++ b/main.css
@@ -1,8 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
 
 .room{
-	font-family:"Roboto";
-    font-size: 18px;
+	font-family:"Roboto", sans-serif;
+  font-size: 18px;
+}
+
+.headshot {
+  width: 50%;
 }
 
 img {
